--- a/foh.html
+++ b/foh.html
@@ -67,7 +67,7 @@ button {
 <textarea id="note" placeholder="Uten løk / uten saus / annet…"></textarea>
 
 <br>
-<button onclick="newOrder()">NY ORDRE</button>
+<button id="orderBtn" onclick="newOrder()">NY ORDRE</button>
 <br>
 <button class="undo" onclick="undoLast()">↩️ UNDO</button>
 
@@ -84,12 +84,13 @@ var firebaseConfig = {
 if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-/* 🔢 STATE */
+/* STATE */
 let menu = {};
 let lastOrderId = null;
 let lastDishId = null;
+let busy = false;
 
-/* 🔢 ALLTID SYNK NUMMER FRA FIREBASE */
+/* 🔢 ALLTID VIS lastNumber FRA DB */
 db.ref("lastNumber").on("value", snap => {
   const val = snap.val();
   document.getElementById("num").innerText =
@@ -123,34 +124,38 @@ db.ref("menu").on("value", snap => {
   }
 });
 
-/* 🆕 NY ORDRE */
+/* 🆕 NY ORDRE – ATOMISK UTSOLGT-SJEKK */
 function newOrder() {
+  if (busy) return;
+  busy = true;
+  document.getElementById("orderBtn").disabled = true;
+
   const dishId = document.getElementById("dish").value;
   if (!dishId) {
-    alert("Ingen rett valgt");
+    resetBusy();
     return;
   }
 
-  // 1️⃣ Først: prøv å øke sold ATOMISK
+  // 1️⃣ Øk sold ATOMISK – stopp hvis utsolgt
   db.ref("menu/" + dishId).transaction(dish => {
     if (!dish) return;
-
-    // STOPP hvis utsolgt
-    if (dish.sold >= dish.max) {
-      return; // avbryt transaction
-    }
-
+    if (dish.sold >= dish.max) return;
     dish.sold += 1;
     return dish;
   }, (err, committed, snap) => {
     if (!committed) {
       alert("❌ Denne retten er utsolgt");
+      resetBusy();
       return;
     }
 
-    // 2️⃣ Kun hvis vi faktisk fikk solgt én
+    // 2️⃣ Kun hvis vi faktisk fikk solgt → nytt nummer
     db.ref("lastNumber").transaction(n => (n || 0) + 1, (e, ok, numSnap) => {
-      if (!ok) return;
+      if (!ok) {
+        rollbackSold(dishId);
+        resetBusy();
+        return;
+      }
 
       const num = Number(numSnap.val());
       const dish = snap.val();
@@ -167,10 +172,10 @@ function newOrder() {
 
       document.getElementById("allergy").checked = false;
       document.getElementById("note").value = "";
+      resetBusy();
     });
   });
 }
-
 
 /* ↩️ UNDO – EKTE ROLLBACK */
 function undoLast() {
@@ -185,19 +190,27 @@ function undoLast() {
   db.ref("orders/" + orderId).remove();
 
   // 2️⃣ Rull tilbake solgt
-  db.ref("menu/" + lastDishId + "/sold")
-    .transaction(n => Math.max((n || 1) - 1, 0));
+  rollbackSold(lastDishId);
 
-  // 3️⃣ RULL TILBAKE NUMMERET KUN HVIS DET ER SISTE
+  // 3️⃣ Rull tilbake nummer KUN hvis siste
   db.ref("lastNumber").transaction(n => {
-    if (Number(n) === orderId) {
-      return n - 1;
-    }
+    if (Number(n) === orderId) return n - 1;
     return n;
   });
 
   lastOrderId = null;
   lastDishId = null;
+}
+
+/* 🔁 HJELPEFUNKSJONER */
+function rollbackSold(dishId) {
+  db.ref("menu/" + dishId + "/sold")
+    .transaction(n => Math.max(n - 1, 0));
+}
+
+function resetBusy() {
+  busy = false;
+  document.getElementById("orderBtn").disabled = false;
 }
 
 /* 📊 STATUS */
@@ -212,4 +225,3 @@ db.ref("orders").on("value", snap => {
 
 </body>
 </html>
-
